# acb_link_desktop

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.html  README.md  acb_link.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.ci/: .pre-commit-config.yaml
.github/: CODEOWNERS  copilot-instructions.html  copilot-instructions.md
.github/agents/: accessibility-auditor.html  accessibility-auditor.md  doc-writer.html  doc-writer.md  performance-analyst.html  performance-analyst.md  release-manager.html  release-manager.md  security-reviewer.html  security-reviewer.md  test-engineer.html  test-engineer.md  wxpython-ui-implementer.html  wxpython-ui-implementer.md
.github/prompts/: accessibility-review.prompt.html  accessibility-review.prompt.md  bugfix.prompt.html  bugfix.prompt.md  docs-update.prompt.html  docs-update.prompt.md  feature-implementation.prompt.html  feature-implementation.prompt.md  performance-review.prompt.html  performance-review.prompt.md  refactor.prompt.html  refactor.prompt.md  release-notes.prompt.html  release-notes.prompt.md  testing.prompt.html  testing.prompt.md  ui-accessibility-audit.prompt.html  ui-accessibility-audit.prompt.md
.github/workflows/: build.yml  build.yml.txt  format-and-lint.yml  pre-commit.yml  tests.yml
acb_link/: __init__.py  accessibility.py  admin_auth_ui.py  admin_config.py  advanced_playback.py  advanced_settings.py  affiliate_admin.py  affiliate_feedback.py  analytics.py  announcement_ui.py  announcements.py  app_enhancements.py  calendar_integration.py  config.py  data.py  data_sync.py  dialogs.py  distribution.py  enhanced_podcasts.py  enhanced_voice.py  event_scheduler.py  favorites.py  feedback.py  github_admin.py  home_panel.py  home_widgets.py  localization.py  main.py  main_frame.py  media_player.py  native_player.py  new_panels.py  offline.py  panels.py  playback_enhancements.py  playlists.py  podcast_manager.py  scheduled_recording.py  scheduler.py  search.py  (+10 more)
data/s3/: a11911.pls  a17972.pls  a18975.pls  a27778.pls  a36240.pls  a44175.pls  a46090.pls  a85327.pls  a89697.pls  a95398.pls  aboutus.xml  acbradiosites.xml  acbsites.xml  adpsites.xml  categories.xml  index.html  link.opml  publications.xml  sigs.xml  states.xml  streams.xml
docs/: ACCESSIBILITY.html  ACCESSIBILITY.md  ANNOUNCEMENT.html  ANNOUNCEMENT.md  CHANGELOG.html  CHANGELOG.md  DEPLOYMENT.html  DEPLOYMENT.md  DEVELOPMENT.html  DEVELOPMENT.md  FEATURES.html  FEATURES.md  INSTALLATION.html  INSTALLATION.md  PRD.md  ROADMAP.html  ROADMAP.md  TECHNICAL_REFERENCE.html  TECHNICAL_REFERENCE.md  USER_GUIDE.html  USER_GUIDE.md  makehtml.bat  prd.html
hooks/: hook-openwakeword.py  hook-speech_recognition.py  rthook_block_heavy_imports.py
installer/: acb_link.nsi  acb_link.wxs  version_info.txt
scripts/: build_macos.sh  build_windows.ps1  convert_md_to_html.py  setup_repo_protection.ps1
tests/: __init__.py  test_accessibility.py  test_scheduler.py  test_updater.py  test_voice_control.py
