[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acb-link-desktop"
version = "1.0.0"
description = "ACB Link Desktop - Your gateway to ACB media content"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BITS (Blind Information Technology Specialists)", email = "bits@acb.org"}
]
maintainers = [
    {name = "American Council of the Blind", email = "acblink@acb.org"}
]
keywords = [
    "accessibility",
    "blind",
    "visually-impaired",
    "acb",
    "streaming",
    "podcasts",
    "screen-reader",
    "wcag",
    "voiceover",
    "nvda",
    "jaws"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Adaptive Technologies",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "wxPython>=4.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "icalendar>=5.0.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
# Windows-specific dependencies
windows = [
    "accessible_output2>=0.17",
    "pyaudio>=0.2.13",
    "python-vlc>=3.0.18121",
]
# macOS-specific dependencies  
macos = [
    "pyobjc-framework-Cocoa>=9.0",
    "pyaudio>=0.2.13",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pyinstaller>=5.0.0",
]
# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://acb.org/acb-link"
Documentation = "https://github.com/acbnational/acb_link_desktop/docs"
Repository = "https://github.com/acbnational/acb_link_desktop"
Changelog = "https://github.com/acbnational/acb_link_desktop/blob/main/CHANGELOG.md"
Issues = "https://github.com/acbnational/acb_link_desktop/issues"

[project.scripts]
acb-link = "acb_link.main:main"

[project.gui-scripts]
acb-link-gui = "acb_link.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acb_link*"]

[tool.setuptools.package-data]
acb_link = ["*.json", "*.xml", "*.opml", "*.pls", "*.png"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["acb_link"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
